all routes tested. bugs fixed. added readme.md file and instruction. added routes to give yourself admin/user role
